# webcrawler

./: .env  .gitignore  README.md  crawler_results.tsv  main.py  pyproject.toml
docs/: component_flow.md  workflow.md
src/: __init__.py
src/app/: __init__.py  web_crawler.py
src/app/models/: __init__.py  crawl_page_result.py  crawl_process_result.py  crawl_result.py  metrics.py  page_data.py
src/app/scraper/: __init__.py  scraper.py
src/app/web_crawler/: __init__.py  web_crawler_factory.py  web_crawler_manager.py  web_crawler_worker.py
src/utils/: __init__.py  config.py  file_io.py  interaction.py  io_file_writer.py  logger.py  metrics_pubsub.py  tsv_util.py  url_utils.py
