[tool.poetry]
name = "webcraler"
version = "0.1.0"
description = ""
authors = ["Erez Zohar <erezhr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
urllib3 = "2.0.7"
tqdm = "4.66.1"
validators = "0.22.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
aiohttp = "^3.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
