[tool.poetry]
name = "webcrawler"
version = "0.1.0"
description = "High-performance asynchronous web crawler with integrated scraping capabilities"
authors = ["Erez Zohar <erezhr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
urllib3 = "2.0.7"
tqdm = "4.66.1"
validators = "0.22.0"
pydantic = "^2.6.1"
aiohttp = "^3.11.2"
playwright = "^1.48.0"
tabulate = "^0.9.0"
environs = "^11.2.0"
pathvalidate = "^3.2.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
